Attempt to fix footer alignment

--- a/style.css
+++ b/style.css
@@ -128,6 +128,10 @@ header ul li, footer ul li{
   list-style-type: none;
 }
 
+.copy-footer {
+  margin: 0;
+}
+
 /* Widgets */
 .widget-title{
   text-align: center;
